fix: increase colour contrast, add meta tag, & fix minor SEO & performance issues.

--- a/client/src/components/layout/styles/TextBox.module.css
+++ b/client/src/components/layout/styles/TextBox.module.css
@@ -19,7 +19,7 @@
 
 @keyframes blinkCursor {
   0% {
-    border-bottom: solid 2px #0284c7;
+    border-bottom: solid 2px #075985;
   }
 
   100% {
